--- a/steps/identity/appellant-nino/template.html
+++ b/steps/identity/appellant-nino/template.html
@@ -1,7 +1,7 @@
 {% extends "components/form-template.html" %}
 {% from "components/fields.njk" import textbox, formSection %}
 
-{% set title = title | safe %}
+{% set title = title %}
 
 {% block fields %}
     {% call formSection() %}
