--- a/steps/compliance/have-a-mrn/template.html
+++ b/steps/compliance/have-a-mrn/template.html
@@ -8,7 +8,7 @@
         <p class="govuk-body">{{ content.subtitle }}</p>
 
         {% if benefitCode == 'UC'%}
-            <p class="govuk-body">{{ content[benefitCode.toLowerCase()].subtitle_para2 }}</p>
+            <p class="govuk-body">{{ content[benefitCode.toLowerCase()].subtitle_para2 | safe }}</p>
         {% endif %}
 
         {{ selectionButtons(
