fixing appellant page content for appointee journey

--- a/steps/identity/appellant-in-uk/template.html
+++ b/steps/identity/appellant-in-uk/template.html
@@ -4,7 +4,7 @@
 {% from "details/macro.njk" import govukDetails %}
 
 {% block pageTitle %}{{ content.titleHead }} - {{ commonContent[htmlLang].windowTitleSuffix }}{% endblock %}
-{% set title = content.title %}
+{% set title = title %}
 
 {% block fields %}
     <div id="appellantInUk">
