--- a/steps/identity/appellant-international-contact-details/answer.html
+++ b/steps/identity/appellant-international-contact-details/answer.html
@@ -36,6 +36,7 @@
         </dd>
     </div>
 </dl>
+{% if not isAppointeeJourney %}
 <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.emailAddress.question }}</dt>
@@ -50,3 +51,4 @@
         <dd class="govuk-summary-list__actions"></dd>
     </div>
 </dl>
+{% endif %}
