reverting irn date image to be existing mrn image and improving wording of error messages

--- a/steps/compliance/check-irn/template.html
+++ b/steps/compliance/check-irn/template.html
@@ -6,7 +6,7 @@
 
 {% block fields %}
     <p class="govuk-body">{{ content.subtitle }}</p>
-    <img class="mrn-image" src="{{ asset_path }}images/irn-date.png"  alt="{{ content.imageAlt }}">
+    <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt }}">
 
     {% call formSection() %}
         <legend id="check-irn" class="govuk-body govuk-!-font-weight-bold">{{ content.question }}</legend>
