--- a/steps/compliance/irn-date/template.html
+++ b/steps/compliance/irn-date/template.html
@@ -5,7 +5,7 @@
 {% set title = content.title %}
 
 {% block fields %}
-    <img class="mrn-image" src="{{ asset_path }}images/irn-date.png"  alt="{{ content.imageAlt }}">
+    <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt }}">
     {% call formSection() %}
         {{ date(
             fields.irnDate,
