getting sya to work with ccd

--- a/steps/identity/appellant-ibca-ref/template.html
+++ b/steps/identity/appellant-ibca-ref/template.html
@@ -7,6 +7,6 @@
 {% block fields %}
     {% call formSection() %}
             <p class="govuk-body">{{ subtitle }}</p>
-        {{ textbox(fields.ibcaRef, content.fields.ibcaRef.title, hint="") }}
+        {{ textbox(fields.ibcaReference, content.fields.ibcaReference.title, hint="") }}
     {% endcall %}
 {% endblock %}
