--- a/steps/identity/appellant-in-uk/template.html
+++ b/steps/identity/appellant-in-uk/template.html
@@ -10,12 +10,12 @@
     <div id="appellantInUk">
         {% call formSection() %}
             {{ selectionButtons(
-                fields.inUk,
+                fields.isInUk,
                 content.question,
                 hint = '',
                 options = [
-                    { label: content.fields.inUk.yes, value: "yes" },
-                    { label: content.fields.inUk.no,  value: "no" }
+                    { label: content.fields.isInUk.yes, value: "yes" },
+                    { label: content.fields.isInUk.no,  value: "no" }
                 ])
             }}
         {% endcall %}
