--- a/steps/compliance/mrn-date/template.html
+++ b/steps/compliance/mrn-date/template.html
@@ -1,19 +1,21 @@
 {% extends "components/form-template.html" %}
 {% from "components/fields.njk" import formSection, date %}
 
-{% set title = content.title | safe %}
+{% set title = content["title" + suffix] %}
 
 {% block fields %}
     {% if benefitType === 'UC' %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date-uc.png"  alt="{{ content.imageAlt }}">
+    {% elif isIba %}
+        <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAltIba }}">
     {% else %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt }}">
     {% endif %}
     {% call formSection() %}
         {{ date(
             fields.mrnDate,
-            content.dateLegend,
-            hint = content.dateHint,
+            content["dateLegend" + suffix],
+            hint = content["dateHint" + suffix],
             labels = {
                 day: content.fields.date.day,
                 month: content.fields.date.month,
