--- a/steps/identity/appellant-international-contact-details/template.html
+++ b/steps/identity/appellant-international-contact-details/template.html
@@ -10,6 +10,7 @@
         {{ textbox(fields.addressLine1,             content.fields.addressLine1.title,          hint="") }}
         {{ textbox(fields.addressLine2,             content.fields.addressLine2.title,          hint="") }}
         {{ textbox(fields.townCity,                 content.fields.townCity.title,              hint="") }}
+        {{ textbox(fields.postCode,                 content.fields.postCode.title,              hint="") }}
         {{ select(fields.country,                   content.fields.country.title,               options=getCountries) }}
         {{ select(fields.portOfEntry,               content.fields.portOfEntry.title,           options=getPortOfEntryList) }}
         {{ textbox(fields.phoneNumber,              content.fields.phoneNumber.title,           hint=content.fields.phoneNumber.hint) }}
