--- a/steps/hearing/the-hearing/template.html
+++ b/steps/hearing/the-hearing/template.html
@@ -1,20 +1,47 @@
 {% extends "components/form-template.html" %}
 {% from "components/fields.njk" import formSection, selectionButtons %}
 
-{% set title = content.title | safe %}
+{% set title = content["title" + suffix] %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle }}</p>
-    <p class="govuk-body">{{ content.explainReasons }}</p>
-    <p class="govuk-body">{{ content.arrangeSupport }}</p>
+    {% if isIba %}
+        <p class="govuk-body">{{ content.subtitleIba }}</p>
 
-    {{ selectionButtons(
-        fields.attendHearing,
-        content.fields.attendHearing.title,
-        hideQuestion = false,
-        options = [
-            { label: content.fields.attendHearing.yes, value: "yes" },
-            { label: content.fields.attendHearing.no, value: "no" }
-        ])
-    }}
+        <p class="govuk-heading-m">{{ content.hearingFormatsList.title }}</p>
+        <p class="govuk-body">{{ content.hearingFormatsList.subtitle }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>{{ content.hearingFormatsList.bulletPoint1 }}</li>
+            <li>{{ content.hearingFormatsList.bulletPoint2 }}</li>
+        </ul>
+
+        <p class="govuk-heading-m">{{ content.hearingSupportList.title }}</p>
+        <p class="govuk-body">{{ content.hearingSupportList.subtitle }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>{{ content.hearingSupportList.bulletPoint1 | safe }}</li>
+        </ul>
+
+        {{ selectionButtons(
+            fields.attendHearing,
+            content.fields.attendHearing.titleIba,
+            hideQuestion = false,
+            options = [
+                { label: content.fields.attendHearing["yes" + suffix], value: "yes" },
+                { label: content.fields.attendHearing["no" + suffix], value: "no" }
+            ])
+        }}
+    {% else %}   
+        <p class="govuk-body">{{ content.subtitle | safe }}</p>
+        <p class="govuk-body">{{ content.explainReasons | safe }}</p>
+        <p class="govuk-body">{{ content.arrangeSupport | safe }}</p>
+
+        {{ selectionButtons(
+            fields.attendHearing,
+            content.fields.attendHearing.title,
+            hideQuestion = false,
+            options = [
+                { label: content.fields.attendHearing.yes, value: "yes" },
+                { label: content.fields.attendHearing.no, value: "no" }
+            ])
+        }}
+    {% endif %}
 {% endblock %}
