--- a/steps/representative/representative-international-details/template.html
+++ b/steps/representative/representative-international-details/template.html
@@ -20,6 +20,7 @@
     {{ textbox(fields.addressLine2, content.fields.addressLine2.title,  hint="") }}
     {{ textbox(fields.townCity,     content.fields.townCity.title,      hint="") }}
     {{ select(fields.country,       content.fields.country.title,       options=getCountries) }}
+    {{ textbox(fields.postCode,     content.fields.postCode.title,      hint="") }}
     {{ textbox(fields.phoneNumber,  content.fields.phoneNumber.title,   hint=content.fields.phoneNumber.hint) }}
     {{ textbox(fields.emailAddress, content.fields.emailAddress.title,  hint=content.fields.emailAddress.hint) }}
 {% endblock %}
