--- a/steps/identity/appellant-ibca-ref/template.html
+++ b/steps/identity/appellant-ibca-ref/template.html
@@ -1,9 +1,11 @@
 {% extends "components/form-template.html" %}
 {% from "components/fields.njk" import textbox, formSection %}
 
+{% set title = content.title %}
+
 {% block fields %}
     {% call formSection() %}
-            <p class="govuk-body">{{ subtitle }}</p>
+            <p class="govuk-body">{{ content.subtitle }}</p>
         {{ textbox(fields.ibcaRef, content.fields.ibcaRef.title, hint="") }}
     {% endcall %}
 {% endblock %}
