--- a/steps/identity/appellant-ibca-reference/template.html
+++ b/steps/identity/appellant-ibca-reference/template.html
@@ -6,6 +6,6 @@
 {% block fields %}
     {% call formSection() %}
             <p class="govuk-body">{{ content.subtitle }}</p>
-        {{ textbox(fields.ibcaRef, content.fields.ibcaRef.title, hint="") }}
+        {{ textbox(fields.ibcaReference, content.fields.ibcaReference.title, hint="") }}
     {% endcall %}
 {% endblock %}
