adding port of entry instead of code to CYA

--- a/steps/identity/appellant-international-contact-details/answer.html
+++ b/steps/identity/appellant-international-contact-details/answer.html
@@ -29,7 +29,7 @@
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.portOfEntry.question }}</dt>
         <dd class="govuk-summary-list__value">
-            {{ fields.portOfEntry.value }}<br>
+            {{ getPortOfEntryFromCode }}<br>
         </dd>
         <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
