SSCSCI-1357: change to rdn for cya and reason for appealing screens

--- a/steps/reasons-for-appealing/reason-for-appealing/template.html
+++ b/steps/reasons-for-appealing/reason-for-appealing/template.html
@@ -59,7 +59,7 @@
 {% block listItems %}
     {% if isIba %}
         <p class="govuk-body">{{ content.ibaExplained }}</p>
-        <p class="govuk-body">{{ content.readYouIRN }}</p>
+        <p class="govuk-body">{{ content.readYouRDN }}</p>
     {% else %}
         <p class="govuk-body">{{ content.dwpExplained }}</p>
         <p class="govuk-body">{{ content.readYouMRN }}</p>
