SSCSCI-1179 getting sya to work with ccd (#1548)
* pulling the port of entry list dynamically from exposed endpoint in case api

* pulling the country of residence list dynamically from exposed endpoint in case api

* pulling the country of residence list dynamically from exposed endpoint in case api

* temp debug

* temp debug

* test fix

* temp logging for debug

* fix

* test fix

* fix for fetching countries

* setting get req to enum to default to aat rather than localhost

* refactoring to just use config.api.url without needing if statements

* refactoring to just use config.api.url without needing if statements

* fix

* fixing appellant page content for appointee journey

* addressing code review comments

* reverting irn date image to be existing mrn image and improving wording of error messages

* Revert "fixing appellant page content for appointee journey"

This reverts commit a4c3a412

* reverting IBA related Appointee changes (out of country related)

* removing appointee entirely from IBA flow

* fix

* getting sya to work with ccd

* getting sya to work with ccd

* changing date hint to 2024

* replacing some nino logging for iba

* Adding new appellant Role page in place of appointee question flow

* removing HaveAnIRN page and making HaveAMRN page dynamic with IRN info

* removing IRNDate page and making MRNDate page dynamic with IRN info

* removing CheckIRN page and making CheckMRN page dynamic with IRN info

* removing IRNOverOneMonthLate.js page and making MRNOverOneMonthLate.js page dynamic with IRN info

* removing IRNOverThirteenMonthsLate.js.js page and making MRNOverThirteenMonthsLate.js page dynamic with IRN info

* fixing flow after SSCSCI-1181 rebase

* SYA submission working with out of UK appeals

* merge rebase fixes

* merge rebase fixes

* getting rep address working for SYA submission

* fix

* replacing axios with superagent

* removing setPortsOfEntry

--- a/steps/representative/representative-in-uk/template.html
+++ b/steps/representative/representative-in-uk/template.html
@@ -9,12 +9,12 @@
     <div id="representativeInUk">
         {% call formSection() %}
             {{ selectionButtons(
-                fields.inUk,
+                fields.inMainlandUk,
                 content.question,
                 hint = '',
                 options = [
-                    { label: content.fields.inUk.yes, value: "yes" },
-                    { label: content.fields.inUk.no,  value: "no" }
+                    { label: content.fields.inMainlandUk.yes, value: "yes" },
+                    { label: content.fields.inMainlandUk.no,  value: "no" }
                 ])
             }}
         {% endcall %}
