--- a/steps/identity/appellant-in-mainland-uk/template.html
+++ b/steps/identity/appellant-in-mainland-uk/template.html
@@ -6,7 +6,7 @@
 {% set title = content.title %}
 
 {% block fields %}
-    <div id="appellantInUk">
+    <div id="appellantInMainlandUk">
         {% call formSection() %}
             {{ selectionButtons(
                 fields.inMainlandUk,
