--- a/steps/representative/representative-in-mainland-uk/template.html
+++ b/steps/representative/representative-in-mainland-uk/template.html
@@ -6,7 +6,7 @@
 {% set title = content.title %}
 
 {% block fields %}
-    <div id="representativeInUk">
+    <div id="representativeInMainlandUk">
         {% call formSection() %}
             {{ selectionButtons(
                 fields.inMainlandUk,
