Other reasons for appealing Welsh translation & refactoring code
Removing the dynamic text rendering and going back to original code. Just adding the iba version content to render instead

--- a/steps/reasons-for-appealing/other-reasons-for-appealing/template.html
+++ b/steps/reasons-for-appealing/other-reasons-for-appealing/template.html
@@ -6,7 +6,7 @@
 
 {% block fields %}
     {% call formSection() %}
-        <p class="govuk-body">{{ content.subtitle }}</p>
+        <p class="govuk-body">{{ content["subtitle" + suffix] }}</p>
         <p class="govuk-body">{{ content.additonalInfo }}</p>
 
         {{ textarea(fields.otherReasonForAppealing, content.fields.otherReasonForAppealing.label, hideLabel = true) }}
