Confirmation page update along with Welsh translation
Confirmation screen has not been updated for IBC journey so changes made

--- a/steps/confirmation/template.html
+++ b/steps/confirmation/template.html
@@ -13,14 +13,13 @@
 {% endblock %}
 
 {% block two_thirds %}
-    {% set title = content.title | safe %}
 
     <div class="govuk-panel govuk-panel--confirmation">
         <h1 class="govuk-panel__title">{{ content.title }}</h1>
     </div>
 
     <section class="progress-bar">
-        {% if oralCase %}
+        {% if isIba %}
             <div class="appeal-received active">
                 <div class="ring">
                     <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
@@ -29,66 +28,94 @@
                 <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
             </div>
 
-            <div class="dwp-respond">
+            <div class="ibca-respond">
                 <div class="leg"></div>
                 <div class="ring">
                     <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
-                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
-                <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.textIba }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.response.srTextIba }}</span>
             </div>
 
-            <div class="hearing-booked">
-                <div class="leg"></div>
-                <div class="ring">
-                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                </div>
-                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearingBooked.text }}</h4>
-                <span class="screen-reader-text">{{ content.progressBar.hearingBooked.srText }}</span>
-            </div>
-
-            <div class="hearing">
-                <div class="leg"></div>
-                <div class="ring">
-                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                </div>
-                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearing.text }}</h4>
-                <span class="screen-reader-text">{{ content.progressBar.hearing.srText }}</span>
-            </div>
-        {% endif %}
-
-        {% if paperCase %}
-            <div class="appeal-received active">
-                <div class="ring">
-                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                </div>
-                <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
-                <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
-            </div>
-
-            <div class="dwp-respond paper">
-                <div class="leg"></div>
-                <div class="ring">
-                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                </div>
-                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
-                <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
-            </div>
-
-            <div class="hearing paper">
+            <div class="ibca-decision">
                 <div class="leg"></div>
                 <div class="ring">
                     <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
                 <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.decision.text }}</h4>
                 <span class="screen-reader-text">{{ content.progressBar.decision.srText }}</span>
-            </div>
+            </div>      
+        {% else %}
+
+            {% if oralCase %}
+                <div class="appeal-received active">
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
+                </div>
+
+                <div class="dwp-respond">
+                    <div class="leg"></div>
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
+                </div>
+
+                <div class="hearing-booked">
+                    <div class="leg"></div>
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearingBooked.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.hearingBooked.srText }}</span>
+                </div>
+
+                <div class="hearing">
+                    <div class="leg"></div>
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearing.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.hearing.srText }}</span>
+                </div>
+            {% endif %}
+            {% if paperCase %}
+                <div class="appeal-received active">
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
+                </div>
+    
+                <div class="dwp-respond paper">
+                    <div class="leg"></div>
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
+                </div>
+    
+                <div class="hearing paper">
+                    <div class="leg"></div>
+                    <div class="ring">
+                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                    </div>
+                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.decision.text }}</h4>
+                    <span class="screen-reader-text">{{ content.progressBar.decision.srText }}</span>
+                </div>
+            {% endif %}
         {% endif %}
     </section>
 
     <div class="description">
         <h2 class="govuk-heading-s">{{ content.next.heading }}</h2>
-        <p class="govuk-body">{{ content.next.notify }}</p>
+        <p class="govuk-body">{{ content.next["notify" + suffix] }}</p>
         <p class="govuk-body">{{ content.next.contact }}</p>
     </div>
 
