--- a/steps/compliance/mrn-date/template.html
+++ b/steps/compliance/mrn-date/template.html
@@ -8,7 +8,7 @@
     {% if benefitType === 'UC' %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date-uc.png"  alt="{{ content.imageAlt }}">
     {% elif isIba %}
-        <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAltIba }}">
+        <img class="mrn-image" src="{{ asset_path }}images/rdn-date.png"  alt="{{ content.imageAltIba }}">
     {% else %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt }}">
     {% endif %}
