--- a/steps/confirmation/template.html
+++ b/steps/confirmation/template.html
@@ -19,90 +19,70 @@
     </div>
 
     <section class="progress-bar">
-            {% if oralCase %}
-                <div class="appeal-received active">
-                    <div class="ring">
-                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                    </div>
-                    <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
-                    <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
+        {% if oralCase %}
+            <div class="appeal-received active">
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
-                
-                {% if isIba %}
-                    <div class="ibca-respond">
-                        <div class="leg"></div>
-                        <div class="ring">
-                            <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                        </div>
-                        <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.textIba }}</h4>
-                        <span class="screen-reader-text">{{ content.progressBar.response.srTextIba }}</span>
-                    </div>
-                {% else %}
-                    <div class="dwp-respond">
-                        <div class="leg"></div>
-                        <div class="ring">
-                            <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                        </div>
-                        <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
-                        <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
-                    </div>
-                {% endif %}
+                <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
+            </div>
 
-                <div class="hearing-booked">
-                    <div class="leg"></div>
-                    <div class="ring">
-                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                    </div>
-                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearingBooked.text }}</h4>
-                    <span class="screen-reader-text">{{ content.progressBar.hearingBooked.srText }}</span>
+            <div class="{{ 'ibca-respond' if isIba else 'dwp-respond' }}">
+                <div class="leg"></div>
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response["text" + suffix] }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.response["srText" + suffix] }}</span>
+            </div>
 
-                <div class="hearing">
-                    <div class="leg"></div>
-                    <div class="ring">
-                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                    </div>
-                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearing.text }}</h4>
-                    <span class="screen-reader-text">{{ content.progressBar.hearing.srText }}</span>
+            <div class="hearing-booked">
+                <div class="leg"></div>
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
-            {% endif %}
-            {% if paperCase %}
-                <div class="appeal-received active">
-                    <div class="ring">
-                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                    </div>
-                    <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
-                    <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
-                </div>
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearingBooked.text }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.hearingBooked.srText }}</span>
+            </div>
 
-                {% if isIba %}
-                    <div class="ibca-respond paper">
-                        <div class="leg"></div>
-                        <div class="ring">
-                            <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                        </div>
-                        <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.textIba }}</h4>
-                        <span class="screen-reader-text">{{ content.progressBar.response.srTextIba }}</span>
-                    </div>
-                {% else %}
-                    <div class="dwp-respond paper">
-                        <div class="leg"></div>
-                        <div class="ring">
-                            <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                        </div>
-                        <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response.text }}</h4>
-                        <span class="screen-reader-text">{{ content.progressBar.response.srText }}</span>
-                    </div>
-                {% endif %}
-                <div class="hearing paper">
-                    <div class="leg"></div>
-                    <div class="ring">
-                        <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
-                    </div>
-                    <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.decision.text }}</h4>
-                    <span class="screen-reader-text">{{ content.progressBar.decision.srText }}</span>
+            <div class="hearing">
+                <div class="leg"></div>
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
                 </div>
-            {% endif %}
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.hearing.text }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.hearing.srText }}</span>
+            </div>
+        {% endif %}
+
+        {% if paperCase %}
+            <div class="appeal-received active">
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                </div>
+                <h4 class="govuk-heading-s" aria-hidden="true">{{ content.progressBar.appeal.text }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.appeal.srText }}</span>
+            </div>
+
+            <div class="{{ 'ibca-respond paper' if isIba else 'dwp-respond paper' }}">
+                <div class="leg"></div>
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                </div>
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.response["text" + suffix] }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.response["srText" + suffix] }}</span>
+            </div>
+
+            <div class="hearing paper">
+                <div class="leg"></div>
+                <div class="ring">
+                    <img class="tick" src="{{ asset_path }}images/tick.png" alt="ignored by screen readers" aria-hidden="true">
+                </div>
+                <h4 aria-hidden="true" class="govuk-heading-s govuk-!-font-weight-regular">{{ content.progressBar.decision.text }}</h4>
+                <span class="screen-reader-text">{{ content.progressBar.decision.srText }}</span>
+            </div>
+        {% endif %}
     </section>
 
     <div class="description">
